--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,7 @@ node_modules/
 __pycache__/
 *.log
 *.csv
-*.json
-*.html
-web-dashboard/dist/
 system_state.json
 market_history.json
 trades.json
+debug*.html
